--- a/index.html
+++ b/index.html
@@ -31,6 +31,149 @@
         <button type="button">Online-booking</button>
     </header>
     <!-- --------------------------------------------Main -->
+    <main>
+        <!-- ----------------------------------------Hero -->
+        <section>
+            <ul>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer nofollow noopener">Instagram</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noreferrer nofollow noopener">Youtube</a>
+                </li>
+            </ul>
+            <p>A hair salon for men in Kyiv</p>
+            <h1>BarberShop</h1>
+            <p>We are experts in trendy men’s haircuts.
+We work quickly, carefully and with style.</p>
+        </section>
+        <!-- ----------------------------------------About -->
+        <section>
+            <ul>
+                <li>
+                    <img src="Images/about-img-1.jpg" alt="haircut-1" width="270px" height="445px">
+                </li>
+                <li>
+                    <img src="Images/about-img-2.jpg" alt="haircut-2" width="270px" height="445px">
+                </li>
+            </ul>
+            <p>About</p>
+            <h2>Best Barbershop in your city</h2>
+            <p>If you want to add more confidence to your image, you should definitely visit us.</p>
+            <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+            <button type="button">ONLINE-BOOKING</button>
+        </section>
+        <!-- ----------------------------------------Prices -->
+        <section>
+            <p>Spend your time with the best masters</p>
+            <h2>Services and prices</h2>
+            <ul>
+                <li>
+                    <p>Men’s haircut</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Beard trim</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Mustache trim</p>
+                    <p>from 200 uah.</p>
+                </li>
+                <li>
+                    <p>Straight razor shave</p>
+                    <p>from 200 uah.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Trainee’s haircut</p>
+                    <p>from 50 uah.</p>
+                </li>
+                <li>
+                    <p>Haircut under the nozzle</p>
+                    <p>from 200 uah.</p>
+                </li>
+                <li>
+                    <p>Children’s haircut (0-12 y.o.)</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Camouflage of gray hair</p>
+                    <p>from 200 uah.</p>
+                </li>
+            </ul>
+            <button type="button">ONLINE-BOOKING</button>
+        </section>
+        <!-- ----------------------------------------Benefits -->
+        <section>
+            <ul>
+                <li>
+                    <span>600</span>
+                    <p>Satisfied customers per day</p>
+                </li>
+                <li>
+                    <span>50</span>
+                    <p>Awards for excellent service</p>
+                </li>
+                <li>
+                    <span>20</span>
+                    <p>Kyiv’s best barbers</p>
+                </li>
+                <li>
+                    <span>100</span>
+                    <p>Gifts for regular customers</p>
+                </li>
+            </ul>
+            <p>Old traditional school</p>
+            <h2>¿Why people come to us?</h2>
+            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
+        </section>
+        <!-- ----------------------------------------Barbers -->
+        <section>
+            <p>For true enjoyers of the atmosphere</p>
+            <h2>Our barbers</h2>
+            <ul>
+                <li>
+                    <img src="Images/barbers-img-1.jpg" alt="barber1" width="370px" height="346px">
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="Images/barbers-img-2.jpg" alt="barber2" width="370px" height="346px">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="Images/barbers-img-3.jpg" alt="barber3" width="370px" height="346px">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                </li>
+            </ul>
+        </section>
+        <!-- ----------------------------------------Gallery -->
+        <section>
+            <h2 hidden>Gallery</h2>
+            <p>In Latin, "barba" means "beard"</p>
+            <ul>
+                <li><img src="Images/gal-1.jpg" alt="Gallery1" width="270px" height="360px"></li>
+                <li><img src="Images/gal-2.jpg" alt="Gallery2" width="270px" height="360px"></li>
+                <li><img src="Images/gal-3.jpg" alt="Gallery3" width="270px" height="360px"></li>
+                <li><img src="Images/gal-4.jpg" alt="Gallery4" width="270px" height="360px"></li>
+            </ul>
+        </section>
+    </main>
     <!-- --------------------------------------------Footer -->
+    <footer>
+        <h2>Contacts</h2>
+        <address>
+            <p>st. Vasilkivska, 7A
+                Kyiv, 08132</p>
+            <a href="tel:+380441111111">+38 044 111 11 11</a>
+            <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+        </address>
+        <p>Working hours</p>
+        <p>Every day from 9:00 to 22:00</p>
+    </footer>
 </body>
 </html>
