--- a/index.html
+++ b/index.html
@@ -7,30 +7,137 @@
     <title>Barbershop</title>
 </head>
 <body>
+<!-- Header -->
     <header>
-        <a href="#">
-            <img src="./Images/logo.svg" alt="logotype" width="69" height="55">
-        </a>
-        <ul>
-            <li>
-                <a href="">About</a>
-            </li>
-            <li>
-                <a href="">Services and prices</a>
-            </li>
-            <li>
-                <a href="">Barbers</a>
-            </li>
-            <li>
-                <a href="">Contacts</a>
-            </li>
-        </ul>
+        <nav>
+            <a href="#">
+                <img src="./Images/logo.svg" alt="logotype" width="69" height="55">
+            </a>
+            <ul>
+                <li>
+                    <a href="">About</a>
+                </li>
+                <li>
+                    <a href="">Services and prices</a>
+                </li>
+                <li>
+                    <a href="">Barbers</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
         <a href="tel:+380441111111">+38 044 111 11 11</a>
         <button type="button">Online-booking</button>
     </header>
     <main>
+<!-- Hero -->
         <section>
-
+            <div>
+                <ul>
+                    <li>
+                        <a href="">Instagram</a>
+                    </li>
+                    <li>
+                        <a href="">Youtube</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <p>A hair salon for men in Kyiv</p>
+                <h1>BarberShop</h1>
+            <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.
+            </p>
+            </div>
+        </section>
+<!-- Price -->
+        <section>
+            <p>
+                Spend your time with the best masters
+            </p>
+            <h2>
+                Services and prices
+            </h2>
+            <table>
+                <tr>
+                    <td>Men’s haircut</td>
+                    <td>from 300 uah.</td>
+                </tr>
+                <tr>
+                    <td>Beard trim</td>
+                    <td>from 300 uah.</td>
+                </tr>
+                <tr>
+                    <td>Mustache trim</td>
+                    <td>from 200 uah.</td>
+                </tr>
+                <tr>
+                    <td>Straight razor shave</td>
+                    <td>from 200 uah.</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td>Trainee’s haircut</td>
+                    <td>from 50 uah.</td>
+                </tr>
+                <tr>
+                    <td>Haircut under the nozzle</td>
+                    <td>from 200 uah.</td>
+                </tr>
+                <tr>
+                    <td>Children’s haircut (0-12 y.o.)</td>
+                    <td>from 300 uah.</td>
+                </tr>
+                <tr>
+                    <td>Camouflage of gray hair</td>
+                    <td>from 200 uah.</td>
+                </tr>
+            </table>
+            <button type="button">online-booking</button>
+        </section>
+<!-- Barbers -->
+        <section>
+            <p>For true enjoyers of the atmosphere</p>
+            <h2>Our barbers</h2>
+            <ul>
+                <li>
+                    <img src="./Images/our-barbers/barbers-1.jpg" alt="barbers photo 1" width="370" height="346">
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./Images/our-barbers/barbers-2.jpg" alt="barbers photo 2" width="370" height="346"
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./Images/our-barbers/barbers-3.jpg" alt="barbers photo 3" width="370" height="346">
+                    <h3>Alan Black</h3>
+                    <p>Extreme Barber</p>
+                </li>
+            </ul>
+        </section>
+<!-- Contacts -->
+        <section>
+            <h2>Contacts</h2>
+            <address>
+                <ul>
+                    <li>
+                        <a href="https://goo.gl/maps/U26yGzkCgBAUFYJT7" target="_blank" rel="noreffer nofollow noopener">st. Vasilkivska, 7A
+                            Kyiv, 08132</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380441111111">+38 044 111 11 11</a>
+                    </li>
+                    <li>
+                        <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+                    </li>
+                </ul>
+            </address>
+            <h3>Working hours</h3>
+            <p>Every day from 9:00 to 22:00</p>
         </section>
     </main>
     <footer></footer>
