--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <a href="tel:+380441111111">+38 044 111 11 11</a>
-        <button type="button">Online-booking</button>
+        <button type="button">ONLINE-BOOKING</button>
     </header>
     <main>
 <!-- Hero -->
@@ -50,6 +50,22 @@
             <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.
             </p>
             </div>
+        </section>
+<!-- About -->
+        <section>
+            <ul>
+                <li>
+                    <img src="./Images/about/about-1.jpg" alt="about-us-photo-1" width="270" height="445">
+                </li>
+                <li>
+                    <img src="./Images/about/about-2.jpg" alt="about-us-photo-2" width="270" height="445">
+                </li>
+            </ul>
+            <p>About</p>
+            <h2>Best Barbershop in your city</h2>
+            <p>If you want to add more confidence to your image, you should definitely visit us.</p>
+            <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+            <button type="button">ONLINE-BOOKING</button>
         </section>
 <!-- Price -->
         <section>
@@ -95,7 +111,31 @@
                     <td>from 200 uah.</td>
                 </tr>
             </table>
-            <button type="button">online-booking</button>
+            <button type="button">ONLINE-BOOKING</button>
+        </section>
+<!-- Benefits -->
+        <section>
+            <ul>
+                <li>
+                    <p>600</p>
+                    <p>Satisfied customers per day</p>
+                </li>
+                <li>
+                    <p>50</p>
+                    <p>Awards for excellent service</p>
+                </li>
+                <li>
+                    <p>20</p>
+                    <p>Kyiv’s best barbers</p>
+                </li>
+                <li>
+                    <p>100</p>
+                    <p>Gifts for regular customers</p>
+                </li>
+            </ul>
+            <p>Old traditional school</p>
+            <h2>¿Why people come to us?</h2>
+            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
         </section>
 <!-- Barbers -->
         <section>
@@ -108,7 +148,7 @@
                     <p>Extreme Barber</p>
                 </li>
                 <li>
-                    <img src="./Images/our-barbers/barbers-2.jpg" alt="barbers photo 2" width="370" height="346"
+                    <img src="./Images/our-barbers/barbers-2.jpg" alt="barbers photo 2" width="370" height="346">
                     <h3>Michele Doe</h3>
                     <p>Extreme Barber</p>
                 </li>
@@ -116,6 +156,25 @@
                     <img src="./Images/our-barbers/barbers-3.jpg" alt="barbers photo 3" width="370" height="346">
                     <h3>Alan Black</h3>
                     <p>Extreme Barber</p>
+                </li>
+            </ul>
+        </section>
+<!-- Gallery -->
+        <section>
+            <h2 hidden>Gallery</h2>
+            <p>In Latin, "barba" means "beard"</p>
+            <ul>
+                <li>
+                    <img src="./Images/gallery/gal-1.jpg" alt="Gallery-photo-1" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./Images/gallery/gal-2.jpg" alt="Gallery-photo-2" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./Images/gallery/gal-3.jpg" alt="Gallery-photo-3" width="270" height="360">
+                </li>
+                <li>
+                    <img src="./Images/gallery/gal-4.jpg" alt="Gallery-photo-4" width="270" height="360">
                 </li>
             </ul>
         </section>
