--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbershop</title>
+    <link rel="stylesheet" href="./css/">
 </head>
 <body>
 <!-- Header -->
@@ -178,8 +179,11 @@
                 </li>
             </ul>
         </section>
-<!-- Contacts -->
+<!-- Contacts & Online -->
         <section>
+<!-- Online -->
+
+<!-- Contacts -->
             <h2>Contacts</h2>
             <address>
                 <ul>
@@ -199,6 +203,17 @@
             <p>Every day from 9:00 to 22:00</p>
         </section>
     </main>
-    <footer></footer>
+<!-- Footer -->
+    <footer>
+        <p>&copy;Copyright 2020</p>
+        <ul>
+            <li>
+                <a href="#">Instagram</a>
+            </li>
+            <li>
+                <a href="#">Youtube</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
