--- a/index.html
+++ b/index.html
@@ -1,219 +1,293 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbershop</title>
-    <link rel="stylesheet" href="./css/">
-</head>
-<body>
-<!-- Header -->
-    <header>
-        <nav>
-            <a href="#">
-                <img src="./Images/logo.svg" alt="logotype" width="69" height="55">
-            </a>
-            <ul>
-                <li>
-                    <a href="">About</a>
-                </li>
-                <li>
-                    <a href="">Services and prices</a>
-                </li>
-                <li>
-                    <a href="">Barbers</a>
-                </li>
-                <li>
-                    <a href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <a href="tel:+380441111111">+38 044 111 11 11</a>
-        <button type="button">ONLINE-BOOKING</button>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <nav class="header-nav">
+        <a class="link logo-link" href="#">
+          <img
+            class="logo-img"
+            src="./Images/logo.svg"
+            alt="logotype"
+            width="69"
+            height="55"
+          />
+        </a>
+        <ul class="list menu">
+          <li class="menu-item">
+            <a class="link menu-link" href="">About</a>
+          </li>
+          <li class="menu-item">
+            <a class="link menu-link" href="">Services and prices</a>
+          </li>
+          <li class="menu-item">
+            <a class="link menu-link" href="">Barbers</a>
+          </li>
+          <li class="menu-item">
+            <a class="link menu-link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="link tel" href="tel:+380441111111">+38 044 111 11 11</a>
+      <button class="modal-btn" type="button">ONLINE-BOOKING</button>
     </header>
     <main>
-<!-- Hero -->
-        <section>
-            <div>
-                <ul>
-                    <li>
-                        <a href="">Instagram</a>
-                    </li>
-                    <li>
-                        <a href="">Youtube</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <p>A hair salon for men in Kyiv</p>
-                <h1>BarberShop</h1>
-            <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.
-            </p>
-            </div>
-        </section>
-<!-- About -->
-        <section>
-            <ul>
-                <li>
-                    <img src="./Images/about/about-1.jpg" alt="about-us-photo-1" width="270" height="445">
-                </li>
-                <li>
-                    <img src="./Images/about/about-2.jpg" alt="about-us-photo-2" width="270" height="445">
-                </li>
-            </ul>
-            <p>About</p>
-            <h2>Best Barbershop in your city</h2>
-            <p>If you want to add more confidence to your image, you should definitely visit us.</p>
-            <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
-            <button type="button">ONLINE-BOOKING</button>
-        </section>
-<!-- Price -->
-        <section>
-            <p>
-                Spend your time with the best masters
-            </p>
-            <h2>
-                Services and prices
-            </h2>
-            <table>
-                <tr>
-                    <td>Men’s haircut</td>
-                    <td>from 300 uah.</td>
-                </tr>
-                <tr>
-                    <td>Beard trim</td>
-                    <td>from 300 uah.</td>
-                </tr>
-                <tr>
-                    <td>Mustache trim</td>
-                    <td>from 200 uah.</td>
-                </tr>
-                <tr>
-                    <td>Straight razor shave</td>
-                    <td>from 200 uah.</td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <td>Trainee’s haircut</td>
-                    <td>from 50 uah.</td>
-                </tr>
-                <tr>
-                    <td>Haircut under the nozzle</td>
-                    <td>from 200 uah.</td>
-                </tr>
-                <tr>
-                    <td>Children’s haircut (0-12 y.o.)</td>
-                    <td>from 300 uah.</td>
-                </tr>
-                <tr>
-                    <td>Camouflage of gray hair</td>
-                    <td>from 200 uah.</td>
-                </tr>
-            </table>
-            <button type="button">ONLINE-BOOKING</button>
-        </section>
-<!-- Benefits -->
-        <section>
-            <ul>
-                <li>
-                    <p>600</p>
-                    <p>Satisfied customers per day</p>
-                </li>
-                <li>
-                    <p>50</p>
-                    <p>Awards for excellent service</p>
-                </li>
-                <li>
-                    <p>20</p>
-                    <p>Kyiv’s best barbers</p>
-                </li>
-                <li>
-                    <p>100</p>
-                    <p>Gifts for regular customers</p>
-                </li>
-            </ul>
-            <p>Old traditional school</p>
-            <h2>¿Why people come to us?</h2>
-            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
-        </section>
-<!-- Barbers -->
-        <section>
-            <p>For true enjoyers of the atmosphere</p>
-            <h2>Our barbers</h2>
-            <ul>
-                <li>
-                    <img src="./Images/our-barbers/barbers-1.jpg" alt="barbers photo 1" width="370" height="346">
-                    <h3>John Smith</h3>
-                    <p>Extreme Barber</p>
-                </li>
-                <li>
-                    <img src="./Images/our-barbers/barbers-2.jpg" alt="barbers photo 2" width="370" height="346">
-                    <h3>Michele Doe</h3>
-                    <p>Extreme Barber</p>
-                </li>
-                <li>
-                    <img src="./Images/our-barbers/barbers-3.jpg" alt="barbers photo 3" width="370" height="346">
-                    <h3>Alan Black</h3>
-                    <p>Extreme Barber</p>
-                </li>
-            </ul>
-        </section>
-<!-- Gallery -->
-        <section>
-            <h2 hidden>Gallery</h2>
-            <p>In Latin, "barba" means "beard"</p>
-            <ul>
-                <li>
-                    <img src="./Images/gallery/gal-1.jpg" alt="Gallery-photo-1" width="270" height="360">
-                </li>
-                <li>
-                    <img src="./Images/gallery/gal-2.jpg" alt="Gallery-photo-2" width="270" height="360">
-                </li>
-                <li>
-                    <img src="./Images/gallery/gal-3.jpg" alt="Gallery-photo-3" width="270" height="360">
-                </li>
-                <li>
-                    <img src="./Images/gallery/gal-4.jpg" alt="Gallery-photo-4" width="270" height="360">
-                </li>
-            </ul>
-        </section>
-<!-- Contacts & Online -->
-        <section>
-<!-- Online -->
-
-<!-- Contacts -->
-            <h2>Contacts</h2>
-            <address>
-                <ul>
-                    <li>
-                        <a href="https://goo.gl/maps/U26yGzkCgBAUFYJT7" target="_blank" rel="noreffer nofollow noopener">st. Vasilkivska, 7A
-                            Kyiv, 08132</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380441111111">+38 044 111 11 11</a>
-                    </li>
-                    <li>
-                        <a href="mailto:barbershop@email.com">barbershop@email.com</a>
-                    </li>
-                </ul>
-            </address>
-            <h3>Working hours</h3>
-            <p>Every day from 9:00 to 22:00</p>
-        </section>
-    </main>
-<!-- Footer -->
-    <footer>
-        <p>&copy;Copyright 2020</p>
-        <ul>
+      <!-- Hero -->
+      <section>
+        <div>
+          <ul class="list">
             <li>
-                <a href="#">Instagram</a>
+              <a class="link" href="">Instagram</a>
             </li>
             <li>
-                <a href="#">Youtube</a>
+              <a class="link" href="">Youtube</a>
             </li>
+          </ul>
+        </div>
+        <div>
+          <p>A hair salon for men in Kyiv</p>
+          <h1>BarberShop</h1>
+          <p>
+            We are experts in trendy mens haircuts. We work quickly, carefully
+            and with style.
+          </p>
+        </div>
+      </section>
+      <!-- About -->
+      <section>
+        <ul class="list">
+          <li>
+            <img
+              src="./Images/about/about-1.jpg"
+              alt="about-us-photo-1"
+              width="270"
+              height="445"
+            />
+          </li>
+          <li>
+            <img
+              src="./Images/about/about-2.jpg"
+              alt="about-us-photo-2"
+              width="270"
+              height="445"
+            />
+          </li>
         </ul>
+        <p>About</p>
+        <h2>Best Barbershop in your city</h2>
+        <p>
+          If you want to add more confidence to your image, you should
+          definitely visit us.
+        </p>
+        <p>
+          We are a team that never stops at what has been achieved and are
+          thirsty for changes. And when you fall into the hands of our master,
+          you will never be the same again. We are a team that is always "on the
+          same wave" with clients. Therefore, we are always ready to improve
+          everyone who comes to us!
+        </p>
+        <button type="button">ONLINE-BOOKING</button>
+      </section>
+      <!-- Price -->
+      <section>
+        <p>Spend your time with the best masters</p>
+        <h2>Services and prices</h2>
+        <table>
+          <tr>
+            <td>Mens haircut</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Beard trim</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Mustache trim</td>
+            <td>from 200 uah.</td>
+          </tr>
+          <tr>
+            <td>Straight razor shave</td>
+            <td>from 200 uah.</td>
+          </tr>
+        </table>
+        <table>
+          <tr>
+            <td>Trainees haircut</td>
+            <td>from 50 uah.</td>
+          </tr>
+          <tr>
+            <td>Haircut under the nozzle</td>
+            <td>from 200 uah.</td>
+          </tr>
+          <tr>
+            <td>Childrens haircut (0-12 y.o.)</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Camouflage of gray hair</td>
+            <td>from 200 uah.</td>
+          </tr>
+        </table>
+        <button type="button">ONLINE-BOOKING</button>
+      </section>
+      <!-- Benefits -->
+      <section>
+        <ul class="list">
+          <li>
+            <p>600</p>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <p>50</p>
+            <p>Awards for excellent service</p>
+          </li>
+          <li>
+            <p>20</p>
+            <p>Kyivs best barbers</p>
+          </li>
+          <li>
+            <p>100</p>
+            <p>Gifts for regular customers</p>
+          </li>
+        </ul>
+        <p>Old traditional school</p>
+        <h2>¿Why people come to us?</h2>
+        <p>
+          Only good things are said about us. But it's better to see and feel 1
+          time than read 10 times.
+        </p>
+      </section>
+      <!-- Barbers -->
+      <section>
+        <p>For true enjoyers of the atmosphere</p>
+        <h2>Our barbers</h2>
+        <ul class="list">
+          <li>
+            <img
+              src="./Images/our-barbers/barbers-1.jpg"
+              alt="barbers photo 1"
+              width="370"
+              height="346"
+            />
+            <h3>John Smith</h3>
+            <p>Extreme Barber</p>
+          </li>
+          <li>
+            <img
+              src="./Images/our-barbers/barbers-2.jpg"
+              alt="barbers photo 2"
+              width="370"
+              height="346"
+            />
+            <h3>Michele Doe</h3>
+            <p>Extreme Barber</p>
+          </li>
+          <li>
+            <img
+              src="./Images/our-barbers/barbers-3.jpg"
+              alt="barbers photo 3"
+              width="370"
+              height="346"
+            />
+            <h3>Alan Black</h3>
+            <p>Extreme Barber</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Gallery -->
+      <section>
+        <h2 hidden>Gallery</h2>
+        <p>In Latin, "barba" means "beard"</p>
+        <ul class="list">
+          <li>
+            <img
+              src="./Images/gallery/gal-1.jpg"
+              alt="Gallery-photo-1"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./Images/gallery/gal-2.jpg"
+              alt="Gallery-photo-2"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./Images/gallery/gal-3.jpg"
+              alt="Gallery-photo-3"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./Images/gallery/gal-4.jpg"
+              alt="Gallery-photo-4"
+              width="270"
+              height="360"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- Contacts & Online -->
+      <section>
+        <!-- Online -->
+
+        <!-- Contacts -->
+        <h2>Contacts</h2>
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                class="link"
+                href="https://goo.gl/maps/U26yGzkCgBAUFYJT7"
+                target="_blank"
+                rel="noreffer nofollow noopener"
+                >st. Vasilkivska, 7A Kyiv, 08132</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+            </li>
+            <li>
+              <a class="link" href="mailto:barbershop@email.com"
+                >barbershop@email.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <h3>Working hours</h3>
+        <p>Every day from 9:00 to 22:00</p>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <p>&copy;Copyright 2020</p>
+      <ul class="list">
+        <li>
+          <a class="link" href="#">Instagram</a>
+        </li>
+        <li>
+          <a class="link" href="#">Youtube</a>
+        </li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
